<?xml version="1.0" encoding="utf-8"?>
<!--
*********************************************************************************
BASIC! is an implementation of the Basic programming language for
Android devices.

Copyright (C) 2010 - 2014 Paul Laughton

This file is part of BASIC! for Android

    BASIC! is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BASIC! is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BASIC!.  If not, see <http://www.gnu.org/licenses/>.

    You may contact the author or current maintainers at http://rfobasic.freeforums.org

**********************************************************************************
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="colors_pref"
        android:title="Screen Colors"
        android:summary="Select a color scheme or custom colors"
        android:persistent="false">

        <ListPreference
            android:key="es_pref"
            android:title="Color Scheme"
            android:summary="Select Color Scheme"
            android:entries="@array/es_list_preference"
            android:entryValues="@array/esvalues_list_preference"
            android:defaultValue="BW"
            android:dialogTitle="@string/choose_one" />

        <CheckBoxPreference
            android:key="custom_colors_pref"
            android:title="Custom Colors"
            android:summary="Define Your Own Colors"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="tc_pref"
            android:dependency="custom_colors_pref"
            android:title="Text Color"
            android:summary="Set Text Color"
            android:digits="@string/color_chars"
            android:defaultValue="@integer/color2"
            android:dialogTitle="@string/hex_color" />

        <EditTextPreference
            android:key="bc_pref"
            android:dependency="custom_colors_pref"
            android:title="Background Color"
            android:summary="Set Background Color"
            android:digits="@string/color_chars"
            android:defaultValue="@integer/color3"
            android:dialogTitle="@string/hex_color" />

        <EditTextPreference
            android:key="lc_pref"
            android:dependency="custom_colors_pref"
            android:title="Line Color"
            android:summary="Set Line Color"
            android:digits="@string/color_chars"
            android:defaultValue="@integer/color1"
            android:dialogTitle="@string/hex_color" />

        <EditTextPreference
            android:key="hc_pref"
            android:dependency="custom_colors_pref"
            android:title="Highlight Color"
            android:summary="Set Highlight Color"
            android:digits="@string/color_chars"
            android:defaultValue="@integer/color4"
            android:dialogTitle="@string/hex_color" />

    </PreferenceScreen>

    <ListPreference
        android:key="font_pref"
        android:title="Font Size"
        android:summary="Select Font Size"
        android:entries="@array/font_list_preference"
        android:entryValues="@array/fontvalues_list_preference"
        android:defaultValue="Medium"
        android:dialogTitle="@string/choose_one" />

    <ListPreference
        android:key="csf_pref"
        android:title="Console Typeface"
        android:summary="Select Typeface"
        android:entries="@array/csf_list_preference"
        android:entryValues="@array/csfvalues_list_preference"
        android:defaultValue="MS"
        android:dialogTitle="@string/choose_one" />

    <CheckBoxPreference
        android:key="console_menu"
        android:title="Console Menu"
        android:summary="Display Console Menu"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="lined_console"
        android:title="Console Lines"
        android:summary="Use Lined Console"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="lined_editor"
        android:title="Editor Lines"
        android:summary="Use Lined Editor"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="wrap_editor"
        android:title="Editor Line Wrap"
        android:summary="Wrap Long Editor Lines"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="autoindent"
        android:title="Editor AutoIndent"
        android:summary="Enable Editor AutoIndent"
        android:defaultValue="false" />

    <ListPreference
        android:key="so_pref"
        android:title="Screen Orientation"
        android:summary="Select Orientation"
        android:entries="@array/orientation_list_preference"
        android:entryValues="@array/orientationvalues_list_preference"
        android:defaultValue="0"
        android:dialogTitle="@string/choose_one" />

    <ListPreference
        android:key="base_drive_pref"
        android:title="Base Drive"
        android:summary="Select New Base Drive"
        android:entries="@array/base_drive_names"
        android:entryValues="@array/base_drive_values"
        android:defaultValue="none"
        android:dialogTitle="@string/choose_one" />

</PreferenceScreen>
